--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.27)
 project(ftpClient C)
-
 set(CMAKE_C_STANDARD 11)
-
 add_executable(ftpClient main.c)
+target_link_libraries(ftpClient ws2_32)
